Fixed z-index

--- a/Geothermal/style.css
+++ b/Geothermal/style.css
@@ -32,7 +32,7 @@ html {
 }
 
 .icon {
-  z-index: 9999;
+  z-index: 1000;
 }
 
 img {
